--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,23 @@ flutter:
     - assets/wechat.png
     - assets/images/
 
+  # To add custom fonts to your application, add a fonts section here,
+  # in this "flutter" section. Each entry in this list should have a
+  # "family" key with the font family name, and a "fonts" key with a
+  # list giving the asset and other descriptors for the font. For
+  # example:
+  fonts:
+    - family: PlayfairDisplay
+      fonts:
+        - asset: assets/fonts/static/PlayfairDisplay-Regular.ttf
+        - asset: assets/fonts/static/PlayfairDisplay-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/static/PlayfairDisplay-Black.ttf
+          weight: 900
+
+  # For details regarding fonts from package dependencies,
+  # see https://flutter.dev/to/font-from-package
+
 dependency_overrides:
   flutter_keyboard_visibility:
     git:
@@ -94,23 +111,3 @@ dependency_overrides:
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
